# fila

./: .env.example  .gitignore  AGENT.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.claude/: CLAUDE.md
.cursor/: rules
.github/workflows/: ci.yml
src/: dashboard.rs  entity.rs  errors.rs  health.rs  lib.rs  main.rs  types.rs
src/batch/: runner.rs
src/batches/: dto.rs  error.rs  handlers.rs
src/cli/: doctor.rs  mod.rs  setup.rs
src/config/: app.rs
src/github/: client.rs  mod.rs  signature.rs  types.rs  webhook.rs
src/merge_events/: dto.rs  error.rs  handlers.rs
src/migrations/: m20260307_033928_create_pull_requests.rs  m20260307_130846_create_batchs.rs  m20260307_131338_create_merge_events.rs  m20260307_200000_add_installation_id.rs  m20260308_120000_add_approved_by.rs  m20260308_200000_add_indexes.rs  mod.rs
src/pull_requests/: dto.rs  error.rs  handlers.rs  mod.rs
src/queue/: mod.rs  runner.rs  service.rs
tests/: integration.rs
