[package]
name = "fila"
version = "0.1.0"
edition = "2024"

[dependencies]
rapina = {version = "0.9.0", features = ["sqlite"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1"
bytes = "1"
http-body-util = "0.1"
dotenvy = "0.15.7"
chrono = "0.4.44"

# Github's API 
reqwest = { version = "0.13.2", features = ["json"] }

# Validate signatures
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"

# GitHub App JWT auth
jsonwebtoken = "9"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }



